[5Vzopbso]feat:API create conversation for buyer and seller
